# damascus

./: .gitignore  Cargo.toml  LICENSE  README.md  build_web.sh
damascus/: Cargo.toml
damascus/src/: lib.rs  node_graph.rs
damascus/src/camera/: mod.rs
damascus/src/evaluable_graph/: edges.rs  mod.rs
damascus/src/evaluable_graph/inputs/: input.rs  input_data.rs
damascus/src/evaluable_graph/nodes/: mod.rs  node.rs
damascus/src/evaluable_graph/nodes/node_data/: axis.rs  camera.rs  grade.rs  light.rs  material.rs  mod.rs  primitive.rs  ray_marcher.rs  scene.rs  texture.rs
damascus/src/evaluable_graph/outputs/: output_data.rs
damascus/src/geometry/: mod.rs  primitives.rs
damascus/src/lights/: mod.rs
damascus/src/materials/: material.rs  mod.rs  procedural_texture.rs
damascus/src/node_graph/: edges.rs  graph.rs  mod.rs  outputs.rs
damascus/src/node_graph/inputs/: input.rs  input_data.rs  mod.rs
damascus/src/node_graph/inputs/input_data/: axis.rs  camera.rs  grade.rs  light.rs  material.rs  mod.rs  primitive.rs  ray_marcher.rs  scene.rs  texture.rs
damascus/src/node_graph/nodes/: mod.rs  node.rs  node_data.rs
damascus/src/node_graph/nodes/node_data/: axis.rs  camera.rs  grade.rs  light.rs  material.rs  mod.rs  primitive.rs  ray_marcher.rs  scene.rs  texture.rs
damascus/src/node_graph/outputs/: mod.rs  output.rs  output_data.rs
damascus/src/render_passes/: mod.rs  ray_marcher.rs
damascus/src/render_passes/resources/: mod.rs
damascus/src/render_passes/texture/: generate.rs  mod.rs  view.rs
damascus/src/scene/: mod.rs
damascus/src/scene_graph/: gpu_scene.rs  mod.rs
damascus/src/shaders/: mod.rs  ray_marcher.rs  scene.rs
damascus/src/shaders/texture/: mod.rs  view.rs
damascus/src/shaders/wgsl/camera/: camera.wgsl
damascus/src/shaders/wgsl/geometry/: primitive.wgsl  scene_sdfs.wgsl
damascus/src/shaders/wgsl/materials/: material.wgsl
damascus/src/shaders/wgsl/pipelines/ray_marcher/: constants.wgsl  fragment_shader.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus/src/shaders/wgsl/utils/: random.wgsl
damascus/src/textures/: mod.rs
damascus_core/: Cargo.toml
damascus_core/src/: lib.rs  scene.rs
damascus_core/src/camera/: mod.rs
damascus_core/src/geometry/: camera.rs  geometry.rs  mod.rs  primitive.rs
damascus_core/src/lights/: mod.rs
damascus_core/src/materials/: material.rs  mod.rs  procedural_texture.rs
damascus_core/src/render_passes/: grade.rs  mod.rs  ray_marcher.rs  texture_viewer.rs
damascus_core/src/render_passes/resources/: mod.rs
damascus_core/src/render_passes/texture/: generate.rs  mod.rs
damascus_core/src/renderers/: compositor.rs  mod.rs  ray_marcher.rs
damascus_core/src/scene/: mod.rs
damascus_core/src/shaders/: aovs.wgsl  camera.wgsl  compositor.rs  lights.wgsl  materials.wgsl  math.wgsl  mod.rs  random.wgsl  ray.wgsl  ray_march.wgsl  ray_marcher.rs  render_parameters.wgsl  texture_viewer.rs  vertex_shader.wgsl
damascus_core/src/shaders/geometry/: camera.wgsl  modifiers.wgsl  normals.wgsl  primitive.wgsl  primitive_sdfs.wgsl  ray.wgsl  scene_sdfs.wgsl
damascus_core/src/shaders/materials/: material.wgsl  procedural_texture.wgsl
damascus_core/src/shaders/renderer/: aovs.wgsl  ray_march.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus_core/src/shaders/texture/: view.rs
damascus_core/src/shaders/textures/: compositing.wgsl
damascus_core/src/shaders/utils/: math.wgsl  noise.wgsl  random.wgsl
damascus_core/src/shaders/wgsl/camera/: camera.wgsl
damascus_core/src/shaders/wgsl/geometry/: camera.wgsl  primitive.wgsl  primitive_sdfs.wgsl  ray.wgsl  scene_sdfs.wgsl
damascus_core/src/shaders/wgsl/lights/: lights.wgsl
damascus_core/src/shaders/wgsl/materials/: material.wgsl  procedural_texture.wgsl
damascus_core/src/shaders/wgsl/pipelines/compositor/: compositor_render_parameters.wgsl  constants.wgsl  fragment_shader.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus_core/src/shaders/wgsl/pipelines/ray_marcher/: aovs.wgsl  constants.wgsl  fragment_shader.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus_core/src/shaders/wgsl/pipelines/texture_viewer/: constants.wgsl  fragment_shader.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus_core/src/shaders/wgsl/renderer/: ray_march.wgsl  render_parameters.wgsl  vertex_shader.wgsl
damascus_core/src/shaders/wgsl/renderers/compositor/: compositor.wgsl  compositor_render_parameters.wgsl
damascus_core/src/shaders/wgsl/renderers/ray_marcher/: ray_marcher.wgsl  (+1 more)
damascus_core/src/shaders/wgsl/textures/: compositing.wgsl  texture.wgsl
damascus_core/src/shaders/wgsl/utils/: math.wgsl  random.wgsl
damascus_core/src/textures/: mod.rs
damascus_ui/: Cargo.toml
damascus_ui/src/: app.rs  icons.rs  lib.rs  main.rs  viewport_3d.rs
damascus_ui/src/app/: data_type.rs  mod.rs  node_data.rs  node_graph.rs  node_graph_state.rs  node_template.rs  response.rs  value_type.rs
damascus_ui/src/panels/: mod.rs  viewport_3d.rs
damascus_ui/src/panels/node_graph/: data_type.rs  graph.rs  mod.rs  node_callbacks.rs  node_data.rs  node_graph_state.rs  node_template.rs  response.rs  state.rs  value_type.rs
damascus_ui/src/panels/node_graph/node/: callbacks.rs  mod.rs  node_data.rs
damascus_ui/src/panels/node_graph/value_type/: mod.rs  ui_data.rs  vec.rs  wrappers.rs
damascus_ui/src/panels/viewport_3d/: mod.rs
damascus_ui/src/shaders/: ray_march.wgsl  test.wgsl  test_import.wgsl
damascus_ui/src/toolbar/: mod.rs
damascus_ui/src/widgets/: dialog.rs  mod.rs
damascus_ui/src/widgets/node_graph/: graph.rs  mod.rs  response.rs  state.rs
damascus_ui/src/widgets/node_graph/node/: data_type.rs  mod.rs  node_data.rs
damascus_ui/src/widgets/toolbar/: mod.rs
damascus_ui/src/widgets/viewport/: mod.rs  settings.rs  viewport_2d.rs  viewport_3d.rs
damascus_ui/src/widgets/viewport/render_pipeline/: mod.rs  ray_marcher_pipeline.rs
damascus_ui/src/widgets/viewport/views/: binding_resources.rs  buffers.rs  compositing_view.rs  compositor_view.rs  mod.rs  ray_marcher_view.rs  resources.rs  scene_view.rs  texture_view.rs
(+158 files in other folders)
