[package]
name = "damascus"
version = "0.1.0"
authors = ["ob1"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.19.0"
egui_node_graph = "0.4.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
