[package]
name = "damascus"
version = "0.1.0"
authors = ["ob1"]
edition = "2021"
rust-version = "1.56"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
eframe = "0.19.0"
egui_node_graph = "0.4.0"
serde = { version = "1.0", optional = true }
bytemuck = { version = "1.7.1", optional = true }

[features]
default = ["wgpu"]
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]
wgpu = ["eframe/wgpu", "bytemuck"]

[profile.release]
opt-level = 2 # fast and small wasm
