[package]
name = "damascus_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
crevice = { version = "0.14.0", features = ["glam"] }
glam = "0.24"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
