[package]
name = "damascus_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
crevice = { version = "0.14.0", features = ["glam"] }
glam = { version = "0.24", features = ["serde"] }
rand = "0.8.5"
serde = "1.0"
strum = { version = "0.25", features = ["derive"] }
