[package]
name = "damascus_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
crevice = { version = "0.18.0", features = ["glam"] }
glam = { version = "0.30", features = ["serde"] }
rand = "0.9"
serde = "1.0"
strum = { version = "0.27", features = ["derive"] }
