[package]
name = "damascus_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
damascus_core = { path = "../damascus_core" }
anyhow = "1.0"
eframe = { version = "0.27", features = ["persistence", "wgpu"]}
egui-modal = "0.3"
egui_node_graph = { git = "https://github.com/obulka/egui_node_graph.git", features = ["persistence"] }
#egui_node_graph = { path = "../../egui_node_graph/egui_node_graph", features = ["persistence"] }
glam = { version = "0.24", features = ["serde"] }
indoc = "2"
serde = "1.0"
serde-hashkey = { version = "0.4.5", features = ["ordered-float"] }
serde_json = "1.0"
bytemuck = "1.7.1"
ndarray = { version = "0.15.6", features = ["serde"] }
rfd = "0.12"
strum = { version = "0.25", features = ["derive"] }
#undo_2 = "0.1" # one day...

[profile.release]
lto = true
